--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 }
 
 dependencies {
+    
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -46,8 +48,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha05'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha05'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
     implementation 'com.mikepenz:materialdrawer:8.4.2'
+
     testImplementation 'junit:junit:4.+'
+    testImplementation 'androidx.room:room-testing:2.3.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
