--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
     implementation 'com.google.api-client:google-api-client-android:1.32.1'
     implementation 'com.google.http-client:google-http-client-gson:1.39.2'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.3.0'
