--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoApp">
         <activity
-            android:name=".view.todolist.TodolistActivity"
+            android:name=".view.lockscreen.LockScreenActivity"
             android:icon="@mipmap/mrgtodolist"
             android:roundIcon="@mipmap/mrgtodolist"
-            android:label="@string/drawer_btn_tasks"
-            android:theme="@style/Theme.TodoApp.TodolistActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.TodoApp.LockScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.todolist.TodolistActivity"
+            android:icon="@mipmap/mrgtodolist"
+            android:roundIcon="@mipmap/mrgtodolist"
+            android:label="@string/drawer_btn_tasks"
+            android:theme="@style/Theme.TodoApp.TodolistActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".view.settings.SettingsActivity"
