--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-gson:1.39.2'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.3.0'
