--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/mrgtodolist"
+        android:icon="@drawable/mirage_todo_app_icon_filled"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/mrgtodolist"
+        android:roundIcon="@drawable/mirage_todo_app_icon_filled"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoApp">
         <activity
             android:name=".view.lockscreen.LockScreenActivity"
-            android:icon="@mipmap/mrgtodolist"
-            android:roundIcon="@mipmap/mrgtodolist"
+            android:icon="@drawable/mirage_todo_app_icon_filled"
+            android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/app_name"
             android:theme="@style/Theme.TodoApp.LockScreenActivity"
             android:exported="true">
@@ -27,20 +27,19 @@
         <activity
             android:name=".view.todolist.TodolistActivity"
             android:launchMode="singleTop"
-            android:icon="@mipmap/mrgtodolist"
-            android:roundIcon="@mipmap/mrgtodolist"
+            android:icon="@drawable/mirage_todo_app_icon_filled"
+            android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/drawer_btn_tasks"
             android:theme="@style/Theme.TodoApp.TodolistActivity"
             android:exported="false">
         </activity>
         <activity
             android:name=".view.settings.SettingsActivity"
-            android:icon="@mipmap/mrgtodolist"
-            android:roundIcon="@mipmap/mrgtodolist"
+            android:icon="@drawable/mirage_todo_app_icon_filled"
+            android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/settings_activity_title"
             android:theme="@style/Theme.TodoApp.SettingsActivity"
             android:exported="false">
         </activity>
     </application>
-
 </manifest>
