--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,17 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
 
     defaultConfig {
         applicationId "com.mirage.todolist"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -40,8 +41,10 @@ android {
 }
 
 dependencies {
-    
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
+
+    kapt 'androidx.room:room-compiler:2.3.0'
+    kapt 'com.google.dagger:dagger-compiler:2.28.3'
+    kapt 'com.google.dagger:dagger-android-processor:2.28.3'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -50,8 +53,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha06'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha07'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha07'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation 'com.mikepenz:materialdrawer:8.4.2'
@@ -63,6 +66,8 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation 'androidx.biometric:biometric:1.1.0'
+    implementation 'com.google.dagger:dagger:2.35.1'
+    implementation 'com.google.dagger:dagger-android:2.35.1'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.3.0'
