--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha07'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha07'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha08'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha08'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
-    implementation 'com.mikepenz:materialdrawer:8.4.2'
+    implementation "androidx.work:work-runtime-ktx:2.6.0"
     implementation 'com.google.android.gms:play-services-identity:17.0.1'
     implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
     implementation 'com.google.api-client:google-api-client-android:1.32.1'
