--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha08'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha08'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha10'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha10'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
-    implementation "androidx.work:work-runtime-ktx:2.6.0"
+    implementation "androidx.work:work-runtime-ktx:2.7.0"
     implementation 'com.google.android.gms:play-services-identity:17.0.1'
     implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
     implementation 'com.google.api-client:google-api-client-android:1.32.1'
@@ -68,6 +68,8 @@ dependencies {
     implementation 'androidx.biometric:biometric:1.1.0'
     implementation 'com.google.dagger:dagger:2.35.1'
     implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.3.0'
