--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:name="com.mirage.todolist.App"
+        android:name="com.mirage.todolist.di.App"
         android:icon="@drawable/mirage_todo_app_icon_filled"
         android:label="@string/app_name"
         android:roundIcon="@drawable/mirage_todo_app_icon_filled"
