--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
-    id "org.jetbrains.kotlin.kapt"
+    id 'org.jetbrains.kotlin.kapt'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -39,10 +40,12 @@ android {
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
-
     kapt 'androidx.room:room-compiler:2.3.0'
     kapt 'com.google.dagger:dagger-compiler:2.28.3'
     kapt 'com.google.dagger:dagger-android-processor:2.28.3'
