--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:name="com.mirage.todolist.di.App"
         android:icon="@drawable/mirage_todo_app_icon_filled"
         android:label="@string/app_name"
@@ -15,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoApp">
         <activity
-            android:name=".view.lockscreen.LockScreenActivity"
+            android:name=".ui.lockscreen.LockScreenActivity"
             android:icon="@drawable/mirage_todo_app_icon_filled"
             android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/app_name"
@@ -36,7 +37,7 @@
             android:exported="false">
         </activity>
         <activity
-            android:name=".view.edittask.EditTaskActivity"
+            android:name=".ui.edittask.EditTaskActivity"
             android:icon="@drawable/mirage_todo_app_icon_filled"
             android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/edit_task_toolbar_edit"
@@ -44,7 +45,7 @@
             android:exported="false">
         </activity>
         <activity
-            android:name=".view.settings.SettingsActivity"
+            android:name=".ui.settings.SettingsActivity"
             android:icon="@drawable/mirage_todo_app_icon_filled"
             android:roundIcon="@drawable/mirage_todo_app_icon_filled"
             android:label="@string/settings_activity_title"
