--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -49,6 +50,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
     kapt 'com.google.dagger:dagger-compiler:2.28.3'
     kapt 'com.google.dagger:dagger-android-processor:2.28.3'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.28.3'
+    kaptAndroidTest 'com.google.dagger:dagger-android-processor:2.28.3'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
@@ -56,11 +59,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha10'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha10'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-beta01'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation "androidx.work:work-runtime-ktx:2.7.0"
@@ -80,7 +83,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.room:room-testing:2.3.0'
+    testImplementation 'com.google.truth:truth:1.1.3'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
 }
