--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,14 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    testImplementation 'org.mockito:mockito-android:4.0.0'
     testImplementation 'androidx.room:room-testing:2.3.0'
     testImplementation 'com.google.truth:truth:1.1.3'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    androidTestImplementation 'org.mockito:mockito-android:4.0.0'
     androidTestImplementation 'com.google.truth:truth:1.1.3'
 }
