--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,14 @@ allprojects {
     gradle.projectsEvaluated {
         tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
             kotlinOptions {
-                //TODO allWarningsAsErrors = true
+                allWarningsAsErrors = true
             }
         }
     }
     repositories {
         google()
         mavenCentral()
+        //noinspection JcenterRepositoryObsolete,GrDeprecatedAPIUsage
         jcenter()
     }
 }
